Arreglos de fallos al hacer el despliegue con Apis y vista de usuario en celular
Se arreglaron fallos que se estaban teniendo con las apis de IA y de Llamadas que las dejaba sin funcionar, tambien se arreglaron temas visuales para hacer mas comodo el uso del aplicativo en dispositivos mobiles.